# Dicom-Compare

./: .envrc  README.md  Scope.md  flake.nix  image-test.csv  pyproject.toml  tag-rob.xlsx  test.xlsx  test_report.csv
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link
dicom_compare/: __init__.py  dicom_comparator.py  dicom_extractor.py  dicom_loader.py  hierarchical_loader.py  image_command.py  image_comparator.py  image_models.py  main.py  metadata_matching.py  models.py  pixel_matching.py  tag_search.py
dicomcompare/: dicom_comparator.py  dicom_extractor.py  dicom_loader.py  main.py  models.py  utils.py
