[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicomcompare"
version = "0.1.0"
description = "Compare DICOM studies from different ZIP exports"
authors = [
    {name = "Ed"},
]
dependencies = [
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydicom>=3.0.1",
    "typer>=0.16.0",
]
requires-python = ">=3.12"

[project.scripts]
dicomcompare = "dicomcompare.main:app"

[tool.hatch.build.targets.wheel]
packages = ["dicomcompare"]
